re PR c++/26071 (ICE declaring destructor virtual and static)

PR c++/26071
	* decl.c (grokdeclarator): Set dname also for destructor.

	* g++.dg/other/virtual2.C: New test.

From-SVN: r110752